# mcp-airq

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  server.json
.github/workflows/: publish.yml  tests.yml
src/mcp_airq/: __init__.py  cli.py  config.py  devices.py  errors.py  guides.py  prompts.py  server.py
src/mcp_airq/tools/: _helpers.py  dangerous.py  read.py  write.py
tests/: conftest.py  test_cli.py  test_config.py  test_dangerous_tools.py  test_device_manager.py  test_errors.py  test_init.py  test_read_tools.py  test_server.py  test_write_tools.py
