[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-airq"
version = "1.6.0"
description = "MCP server for direct HTTP communication with air-Q air quality sensor devices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Corant GmbH" }]
keywords = ["mcp", "air-q", "airq", "air-quality", "sensor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["mcp>=1.26.0", "aioairq>=0.5.0", "aiohttp>=3.13.3", "airq-mcp-timeseries>=0.1.4"]

[project.urls]
Homepage = "https://github.com/CorantGmbH/mcp-airq"
Repository = "https://github.com/CorantGmbH/mcp-airq"
Issues = "https://github.com/CorantGmbH/mcp-airq/issues"
Changelog = "https://github.com/CorantGmbH/mcp-airq/blob/main/CHANGELOG.md"

[project.scripts]
mcp-airq = "mcp_airq.server:main"

[project.optional-dependencies]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.21", "pytest-xdist>=3.0", "aioresponses>=0.7", "pytest-cov>=6.0", "pre-commit>=4.0", "pyright>=1.1", "ruff>=0.11.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests requiring a real air-Q device on the network"]

[tool.coverage.run]
source = ["src/mcp_airq"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_airq"]
